# whisper-dictate

./: .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  TECHNICAL.md  THIRD_PARTY_LICENSES.md  VERSION  cspell.json  flake.nix  index.html  probe_yeti.py  renovate.json  requirements-cpu.txt  requirements-gpu.txt  requirements-parakeet.txt  requirements-windows.txt  rust-toolchain.toml  settings-ui.ps1  settings-ui.vbs  setup.cmd  setup.ps1  setup.sh  sonar-project.properties  voice_pi.py  vp_audio.py  vp_audio_ducking.py  vp_benchmark.py  vp_calibration.py  vp_cli.py  vp_command_hook.py  vp_config.py  vp_corpus.py  vp_device.py  vp_dictionary.py  (+15 more)
crates/whisper-dictate-app/: Cargo.toml  build.rs
crates/whisper-dictate-app/src/: cli.rs  cloud_api.rs  config.rs  dictionary.rs  formatting.rs  injection.rs  lib.rs  main.rs  runtime.rs  telemetry.rs  ui.rs
crates/whisper-dictate-app/src/runtime/: tests.rs
crates/whisper-dictate-app/src/ui/: api_keys.rs  icon.rs  tabs.rs  tests.rs
crates/whisper-dictate-app/tests/: cli_worker.rs  runtime_supervisor.rs
src/rust/: Cargo.toml  audio_dsp.rs  benchmark.rs  cli.rs  cloud_api.rs  command_hook.rs  corpus.rs  corpus_profile.rs  corpus_record.rs  devices.rs  dictionary.rs  doctor.rs  health.rs  history.rs  injection.rs  lib.rs  main.rs  model_capacity.rs  os_cache.rs  privacy.rs  runtime.rs  telemetry.rs  test_env_lock.rs  ui.rs  whisper-dictate-gui.rs
src/rust/audio/: capture.rs  mod.rs  model_cache.rs  pipe.rs  pipewire.rs  raw.rs  resampler.rs  stdin_bridge.rs  vad.rs  vad_tests.rs
src/rust/audio/self_test/: mod.rs  report.rs  runner.rs
src/rust/audio_dsp/: gate_tests.rs  helpers.rs  metrics.rs  mod.rs  silence.rs
src/rust/benchmark/: mod.rs  reporting.rs  scoring.rs
src/rust/cloud_api/: chat.rs  check.rs  http.rs  mod.rs  transcribe.rs
src/rust/config/: cli_ops.rs  io.rs  keys.rs  load.rs  mod.rs  save.rs  schema.rs  settings.rs  settings_schema.json  validate.rs
src/rust/dictate/: audio_route.rs  audio_route_cancel_tests.rs  audio_route_round7_tests.rs  audio_route_test_support.rs  audio_route_tests.rs  backend.rs  env_gates.rs  events.rs  events_tests.rs  mic.rs  mod.rs  ops.rs  restart.rs  simulate.rs  simulate_tests.rs  skip.rs
src/rust/dictate/audio_route/: config.rs  events.rs  mod.rs
src/rust/dictate/backends/: cloud.rs  cloud_tests.rs  cloud_transcribe.rs  cloud_transcribe_tests.rs  hallucination.rs  hallucination_tests.rs  inject.rs  inject_cleanup_tests.rs  inject_restore_tests.rs  inject_test_support.rs  inject_tests.rs  mod.rs  production_transcribe.rs  production_transcribe_tests.rs  whisper_local.rs  whisper_local_tests.rs
src/rust/dictate/session/: mod.rs  tests_ported.rs  tests_support.rs  tests_transitions.rs  types.rs  wire.rs
src/rust/dictionary/: mod.rs  ops.rs  parse.rs  prompt.rs  runtime.rs  store.rs  suggest.rs  training.rs
src/rust/dictionary/suggest/: cli.rs  filters.rs  matching.rs  mod.rs  similarity.rs
src/rust/dictionary/training/: cli.rs  cli_report.rs  extract.rs  merge.rs  misses.rs  mod.rs
src/rust/examples/: hotkey_probe.rs  whisper_local.rs
src/rust/health/: format.rs  grade.rs  mod.rs  util.rs
src/rust/history/: insert.rs  mod.rs  schema.rs  search.rs
src/rust/hotkey/: capture.rs  coordinator.rs  diag.rs  inject_guard.rs  manager.rs  mod.rs  modifier_match.rs  self_test.rs
src/rust/hotkey/coordinator/: mod.rs  tests.rs
src/rust/injection/: dispatcher.rs  enigo_backend.rs  fallback.rs  keymap.rs  linux_helpers.rs  mod.rs  paste.rs  plan.rs  self_test.rs  wayland.rs
src/rust/output_mute/: linux.rs  linux_tests.rs  mod.rs  noop.rs  session.rs  session_tests.rs  state.rs  state_tests.rs  windows.rs  windows_tests.rs
src/rust/postprocess/: mod.rs  prompt.rs  run.rs  settings.rs
src/rust/postprocess_hotkey/: dispatch.rs  mod.rs  profile.rs  registry.rs
src/rust/runtime/: app_root_tests.rs  audio_backend_tests.rs  audio_bridge.rs  audio_spawn.rs  audio_spawn_tests.rs  bridge_terminal_tests.rs  control.rs  desktop_entry_tests.rs  dictate_run.rs  external_toggle.rs  external_toggle_tests.rs  hotkey_install.rs  hotkey_supervisor_tests.rs  in_process.rs  in_process_tests.rs  install_plan.rs  install_plan_tests.rs  mod.rs  process.rs  process_capture_tests.rs  run_terminal_tests.rs  rust_session_audio.rs  rust_session_audio_tests.rs  rust_session_dictate_env.rs  rust_session_inject.rs  rust_session_inject_tests.rs  rust_session_real_backends.rs  rust_session_real_backends_tests.rs  rust_session_sink.rs  rust_session_sink_coverage_tests.rs  rust_session_sink_e2e_tests.rs  rust_session_sink_tests.rs  supervisor.rs  test_support.rs  ubuntu_setup_tests.rs  windows_process_tests.rs  worker_command.rs  worker_command_tests.rs  worker_event_tests.rs  worker_rust.rs  (+2 more)
src/rust/tests/: audio_pipeline.rs  audio_stdin_bridge.rs  cli_worker.rs  groq_cloud_stt.rs  hotkey_cli.rs  inject_cli.rs  runtime_supervisor.rs  single_instance_forward.rs  worker_rust_subprocess.rs
src/rust/ui/: api_key_env_tests.rs  api_key_store_tests.rs  api_keys.rs  app.rs  audio_device_picker_tests.rs  audio_devices.rs  backend_option_tests.rs  benchmark_results.rs  benchmark_task_tests.rs  cloud_settings_tests.rs  corpus.rs  corpus_batch.rs  corpus_record.rs  corpus_record_task_tests.rs  corpus_record_tasks.rs  device_test.rs  diagnostics_level.rs  hotkey.rs  layout_tests.rs  log_render.rs  log_view_tests.rs  model_picker_tests.rs  platform.rs  previews.rs  robustness_tests.rs  runtime_status_tests.rs  secret_store.rs  settings_mode.rs  settings_reset_tests.rs  settings_state.rs  tab_helpers_tests.rs  tasks.rs  test_support.rs  text.rs  text_scale.rs  theme.rs  tray.rs  ui_language_tests.rs  update_check.rs  update_check_tests.rs  (+7 more)
src/rust/whisper/: dispatch.rs  gpu.rs  idle.rs  local.rs  local_discovery.rs  mod.rs  model_manager.rs  model_manager_tests.rs  models_cli.rs  protocol.rs  protocol_tests.rs  self_test.rs  wav.rs  wav_tests.rs
src/rust/whisper-dictate-app/: Cargo.toml  build.rs
(+644 files in other folders)
