[package]
name = "whisper-dictate-app"
version = "0.3.6"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "whisper-dictate"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.30", default-features = true }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.14"
