[package]
name = "whisper-dictate-app"
version = "1.11.0-rc.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/FactusConsulting/whisper-dictate"

[lib]
path = "lib.rs"

[[bin]]
name = "whisper-dictate"
path = "main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.30", default-features = true }
egui_material_icons = "0.2.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
keyring = { version = "3.6", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "crypto-rust",
] }
ureq = { version = "2.12", features = ["json"] }

# Windows-only system-tray icon (notification area). Scoped to the Windows
# target so the Linux/CI build never pulls in tray-icon's gtk/libxdo system
# deps (its default features). On Windows it integrates with the winit/win32
# event loop that eframe already pumps. The pure state→colour and RGBA logic
# in `ui::tray` is cfg-free so its unit tests run on every platform.
[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.24", default-features = false }

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.14"

# Windows intermittently denies rustc access while finalizing incremental cache
# directories, which turns clean builds/tests into noisy warnings. Full rebuilds
# are a bit slower, but deterministic logs are more useful for this desktop app.
[profile.dev]
incremental = false

[profile.test]
incremental = false
