[package]
name = "whisper-dictate-app"
version = "1.12.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/FactusConsulting/whisper-dictate"

[lib]
path = "lib.rs"

[[bin]]
name = "whisper-dictate"
path = "main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# eframe 0.34 changed its DEFAULT renderer from glow (OpenGL) to wgpu; we have
# always shipped on glow, and the wgpu 29 DX12 backend it now pulls fails to
# compile on Windows (gpu-allocator 0.28 vs windows-crate 0.62 type skew in
# wgpu-hal). Stay on glow by opting out of the wgpu default and re-listing the
# non-renderer defaults, so the renderer (and behaviour) match the pre-0.34
# build and wgpu/wgpu-hal/gpu-allocator leave the dependency graph entirely.
eframe = { version = "0.34.3", default-features = false, features = [
  "glow",
  "accesskit",
  "default_fonts",
  "wayland",
  "x11",
] }
egui_material_icons = "0.6.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
keyring = { version = "3.6", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "crypto-rust",
] }
ureq = { version = "3.3", features = ["json"] }

# Windows-only system-tray icon (notification area). Scoped to the Windows
# target so the Linux/CI build never pulls in tray-icon's gtk/libxdo system
# deps (its default features). On Windows it integrates with the winit/win32
# event loop that eframe already pumps. The pure state→colour and RGBA logic
# in `ui::tray` is cfg-free so its unit tests run on every platform.
[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.24", default-features = false }

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.14"

# Windows intermittently denies rustc access while finalizing incremental cache
# directories, which turns clean builds/tests into noisy warnings. Full rebuilds
# are a bit slower, but deterministic logs are more useful for this desktop app.
[profile.dev]
incremental = false

[profile.test]
incremental = false
