[package]
name = "whisper-dictate-app"
version = "1.14.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/FactusConsulting/whisper-dictate"

[lib]
path = "lib.rs"

[[bin]]
name = "whisper-dictate"
path = "main.rs"

# Renderer selection. These features gate the eframe renderer backend; `default`
# selects glow (our shipping renderer). Enabling both is allowed — ui.rs prefers
# wgpu when `ui-egui-wgpu` is on — but a normal build is glow. Build wgpu with
# `--no-default-features --features ui-egui-wgpu`. ui.rs picks the matching
# `eframe::Renderer` by cfg. The renderer-matrix CI workflow builds BOTH so the
# wgpu exit route never silently rots.
[features]
default = ["ui-egui-glow"]
ui-egui-glow = ["eframe/glow"]
ui-egui-wgpu = ["eframe/wgpu"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
# eframe 0.34 flipped its DEFAULT renderer from glow (OpenGL) to wgpu. We ship on
# glow and keep wgpu as a continuously-validated exit route, so the renderer is
# chosen by OUR features (see [features] below) rather than eframe's default:
# `default-features = false` drops eframe's renderer default, the common
# (non-renderer) features stay always-on here, and exactly one of
# `ui-egui-glow` / `ui-egui-wgpu` turns on `eframe/glow` / `eframe/wgpu`.
# Default build = glow; wgpu is opt-in via
# `--no-default-features --features ui-egui-wgpu` and is exercised by the
# periodic renderer-matrix CI workflow.
eframe = { version = "0.34.3", default-features = false, features = [
  "accesskit",
  "default_fonts",
  "wayland",
  "x11",
] }
egui_material_icons = "0.6.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
keyring-core = "1.0"
ureq = { version = "3.3", features = ["json"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0", features = ["crypto-rust"] }

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

# Windows-only system-tray icon (notification area). Scoped to the Windows
# target so the Linux/CI build never pulls in tray-icon's gtk/libxdo system
# deps (its default features). On Windows it integrates with the winit/win32
# event loop that eframe already pumps. The pure state→colour and RGBA logic
# in `ui::tray` is cfg-free so its unit tests run on every platform.
[target.'cfg(windows)'.dependencies]
tray-icon = { version = "0.24", default-features = false }
windows-native-keyring-store = "1.1"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.14"

# Windows intermittently denies rustc access while finalizing incremental cache
# directories, which turns clean builds/tests into noisy warnings. Full rebuilds
# are a bit slower, but deterministic logs are more useful for this desktop app.
[profile.dev]
incremental = false

[profile.test]
incremental = false
