[package]
name = "whisper-dictate-app"
version = "1.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "whisper-dictate"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
eframe = { version = "0.30", default-features = true }
egui_material_icons = "0.2.0"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
keyring = { version = "3.6", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "crypto-rust",
] }
ureq = { version = "2.12", features = ["json"] }

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = "3.14"
